--- a/papers/index.html
+++ b/papers/index.html
@@ -3,12 +3,12 @@ layout: default
 ---
 
 <div id="home">
-  <h1> Papers Presented </h1>
+  <h1> Papers Read </h1>
   <hr />
 
   <ol class="posts">
     {% for post in paginator.posts %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <i><span>{{ post.date | date_to_string }} </span></i> &raquo; <i> {{ post.presenter }}</i>
+    <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <span> {{ post.presenter }}</span> &raquo; <i><span>{{ post.date | date_to_string }} </span></i>
 	<ul>
             {% for paper in post.papers %}
 	    <li><a href="{{ paper.link }}"> {{ paper.name }} </a></li>
