--- a/papers/index.html
+++ b/papers/index.html
@@ -6,7 +6,7 @@ layout: default
   <h1> Papers Read </h1>
   <hr />
 
-  <ol class="posts">
+  <ul class="posts">
     {% for post in paginator.posts %}
     <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <span> {{ post.presenter }}</span> &raquo; <i><span>{{ post.date | date_to_string }} </span></i>
 	<ul>
@@ -16,7 +16,7 @@ layout: default
         </ul>
     </li>
     {% endfor %}
-  </ol>
+  </ul>
 
   <!-- Pagination links -->
   {% if paginator.total_pages > 1 %}
