--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ permalink: /
   <p> ESG reading for HKUST
   </p>
 
-  <p> In the past we've read papers/articles on data structures and algorithms, systems, algorithmic fairness and bias, theory, machine learning, and social issues in tech. Our meetings and discussions are casual, and there is no obligation or expectation to attend. While some background in computer science will help contextualize the papers, there is no required background and we strongly encourage younger/less experienced undergraduates to come.
+  <p>  we've focus on papers/articles on ESG. Our meetings and discussions are casual, and there is no obligation or expectation to attend. While some background in computer science will help contextualize the papers, there is no required background and we strongly encourage younger/less experienced undergraduates to come.
   </p>
 
-  <p> All are welcome to join; we've had students from many different universities, professionals, and even a professor join our meetings in the past! </p>
+  <p> All are welcome to join </p>
 
   <h1> Join </h1>
   <p>Please use this form to be added to our mailing list: <a href="https://forms.gle/XMEh8j6jdDgCbTa7A">form</a>.  If you have any questions, reach out to <i>ssadhuka [at] college [dot] harvard [dot] edu</i> and/or <i>lsingh [at] college [dot] harvard [dot] edu</i>.</p>
