--- a/papers/index.html
+++ b/papers/index.html
@@ -9,13 +9,13 @@ layout: default
   <ul class="posts">
     {% for post in paginator.posts %}
     <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <span> {{ post.presenter }}</span> &raquo; <i><span>{{ post.date | date_to_string }} </span></i>
-	<ul>
-            {% for paper in post.papers %}
-	    <li><a href="{{ paper.link }}"> {{ paper.name }} </a></li>
-	    {% endfor %}
-        </ul>
+      <ul>
+        {% for paper in post.papers | sort: 'author' %}
+	  <li><a href="{{ paper.link }}"> {{ paper.name }} </a></li>
+        {% endfor %}
+      </ul>
     </li>
-    {% endfor %}
+{% endfor %}
   </ul>
 
   <!-- Pagination links -->
