--- a/papers/index.html
+++ b/papers/index.html
@@ -10,6 +10,7 @@ layout: default
     {% for post in paginator.posts %}
     <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <span> {{ post.presenter }}</span> &raquo; <i><span>{{ post.date | date_to_string }} </span></i>
 	<ul>
+	    {% assign sorted_papers = post.papers | sort: 'author' %}
             {% for paper in post.papers %}
 	    <li><a href="{{ paper.link }}"> {{ paper.name }} </a></li>
 	    {% endfor %}
