--- a/papers/index.html
+++ b/papers/index.html
@@ -8,7 +8,7 @@ layout: default
 
   <ul class="posts">
     {% for post in paginator.posts %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <span> {{ post.author }}</span> &raquo; <i><span>{{ post.date | date_to_string }} </span></i>
+    <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <span> {{ post.title }}</span> &raquo; <i><span>{{ post.date | date_to_string }} </span></i>
 	<ul>
 	    
             {% for paper in post.papers %}
