--- a/papers/index.html
+++ b/papers/index.html
@@ -8,11 +8,11 @@ layout: default
 
   <ul class="posts">
     {% for post in paginator.posts %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <span> {{ post.title }}</span> &raquo; <i><span>{{ post.date | date_to_string }} </span></i>
+    <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <span> {{ post.author }}</span> &raquo; <i><span>{{ post.date | date_to_string }} </span></i>
 	<ul>
-	    
-            {% for paper in post.papers %}
-	    <li><a href="{{ paper.link }}"> {{ paper.name }} </a></li>
+	    {% assign sorted_papers = site.papers | sort: 'author' %}
+            {% for paper in sorted_papers %}
+	    <li><a href="{{ paper.url }}"> {{ paper.title }} </a> - <span>{{ paper.author }}</span></li>
 	    {% endfor %}
         </ul>
     </li>
